Fix gap between header and navbar.

--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@
     }
 
     h1{
-        margin: 1% 0% 1% 0%;
+        margin: 3% 0% 3% 0%;
         padding: 0px 0px 0px 30px;
         font-size: 70px;
         
@@ -150,6 +150,11 @@
 }
 
 @media(min-width: 1000px){
+
+    h1{
+        margin: 1% 0% 1% 0%;
+        
+    }
 
     .container{
         display: grid;
